--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,7 +65,7 @@
             </div>
         </div>
         <!-- end left-sidenav-->
-        <div class="page-wrapper">
+        <div class="page-wrapper" style="font-family: Arial, sans-serif; font-size: 16px;">
             <!-- Top Bar Start -->
             <div class="topbar">
                 <!-- Navbar -->
@@ -75,7 +75,7 @@
                         <li class="dropdown">
                             <a class="nav-link dropdown-toggle waves-effect waves-light nav-user" data-bs-toggle="dropdown" href="#" role="button"
                                 aria-haspopup="false" aria-expanded="false">
-                                <span id="nav-username" class="ms-1 nav-user-name hidden-sm">Nick</span>
+                                <span id="nav-username" class="ms-1 nav-user-name hidden-sm"></span>
                                 <img src="/static/images/users/user-5.jpg" alt="profile-user" class="rounded-circle thumb-xs" />
                             </a>
                             <div class="dropdown-menu dropdown-menu-end">
