code improve in contact_table UI

--- a/app/templates/contact_table.html
+++ b/app/templates/contact_table.html
@@ -52,7 +52,7 @@
 
                                                     <button class="green-button delete-button" id="delete-button"
                                                             style="background-color: white; cursor: pointer; width: 30px; height: 30px; border-radius: 50%; display: flex; justify-content: center; align-items: center; border: 1px solid #e3ebf6; box-shadow: 10 10 20px white;"
-                                                            data-contact-id="{{ contact.id }}" onclick="delete_test(this)">
+                                                            data-contact-id="{{ contact.id }}">
                                                         <a class="d-flex justify-content-center align-items-center" style="width: 100%; height: 100%;">
                                                             <div style="width: 24px; height: 24px; background-color: white; border-radius: 50%; display: flex; justify-content: center; align-items: center;">
                                                                 <svg class="svg" height="20" viewBox="0 0 512 512" width="20" xmlns="http://www.w3.org/2000/svg">
