--- a/app/templates/apps-new-portfolio.html
+++ b/app/templates/apps-new-portfolio.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="page-wrapper" style="margin-left: 15px;font-family: Arial, sans-serif; font-size: 16px;">
+<div class="page-wrapper" style="margin-left: 15px;">
     <!-- Page Content-->
     <div class="page-content">
         <div class="container-fluid">
@@ -10,9 +10,9 @@
                     <div class="page-title-box">
                         <div class="row">
                             <div class="col">
-                                <h4 class="page-title">Create Portfolio</h4>
+                                <h4 class="page-title" style="font-size: 17px;margin: 0;color: #2c3652;font-weight: 500;line-height: 18px;">Create Portfolio</h4>
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="javascript:void(0);">Dastone</a></li>
+                                    <li class="breadcrumb-item"><a href="javascript:void(0);" style="font-family: Roboto, sans-serif;color: #303e67;text-decoration: none;">Dastone</a></li>
                                     <li class="breadcrumb-item"><a href="javascript:void(0);">Portfolio</a></li>
                                     <li class="breadcrumb-item active">Create</li>
                                 </ol>
