--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %}
             <!-- Page Content-->
-            <div class="page-content" style="font-family: Arial, sans-serif; font-size: 16px;">
+            <div class="page-content">
                 <div class="container-fluid">
                     <!-- Page-Title -->
                     <div class="row">
