--- a/app/static/css/testimonials.css
+++ b/app/static/css/testimonials.css
@@ -1,5 +1,5 @@
         body {
-            font-family: Arial, sans-serif; /* Optional: set a consistent font family */
+            font-family: Roboto, sans-serif; /* Optional: set a consistent font family */
         }
         .page-title, .card-header button, .card-header button a, .card-body, .table-responsive, .table, .table th, .table td, .green-button, .delete-button, .green-button a, .delete-button a {
             font-size: 16px; /* Change this to your desired font size */
@@ -19,5 +19,5 @@
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         .table th, .table td {
-            color: #000; /* Ensure table text color is black */
+            color: #303e67; /* Ensure table text color is black */
         }
