--- a/app/templates/contact_table.html
+++ b/app/templates/contact_table.html
@@ -1,9 +1,10 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %}
+{% block content %}
 <link rel="stylesheet" type="text/css" href="/static/css/service_table.css">
 <div class="main-panel">
     <div class="content">
         <div class="container-fluid">
-            <h4 class="page-title py-3">Contact List</h4>
+            <h4 class="page-title py-3" style="font-size: 17px;margin: 0;color: #2c3652;font-weight: 500;line-height: 18px;font-family: Roboto, sans-serif;">Contact List</h4>
             <div class="row">
                 <div class="col-md-12">
                     <div class="card">
@@ -13,33 +14,26 @@
                             </button>
                         </div>
                         <div class="card-body">
-                            <div class="table-responsive">
-                                <table id="myTable" class="table table-condensed">
-                                    <thead>
-                                        <tr>
-                                            <th scope="col" style="font-weight: bold; color: #000;">ID</th>
-                                            <th scope="col" style="font-weight: bold; color: #000;">Name</th>
-                                            <th scope="col" style="font-weight: bold; color: #000;">Email</th>
-                                            <th scope="col" style="font-weight: bold; color: #000;">Phone</th>
-                                            <th scope="col" style="font-weight: bold; color: #000;">Message</th>
-                                            <th scope="col" style="font-weight: bold; color: #000;">Action</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for contact in contacts %}
-                                        <tr>
-                                            <td style="color: #000;">{{ loop.index }}</td>
-                                            <td style="color: #000;">{{ contact.name }}</td>
-                                            <td style="color: #000;">{{ contact.email }}</td>
-                                            <td style="color: #000;">{{ contact.phone }}</td>
-                                            <td style="color: #000;">{{ contact.message }}</td>
-                                            <td>
-                                                <span style="display: flex; gap: 5px;">
-                                                    <button class="green-button"
+                            <div class="row">
+                                {% for contact in contacts %}
+                                <div class="col-lg-3 col-md-4 col-sm-6 mb-3">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <div class="media">
+                                                <img src="/static/images/userp.png" alt="user" class="rounded-circle thumb-lg align-self-center">
+                                                <div class="media-body ms-3 align-self-center">
+                                                    <h5 class="mt-0 mb-1">{{ contact.name }}</h5>
+                                                    <p class="mb-0 text-muted">{{ contact.email }}</p>
+                                                    <p class="mb-0 text-muted">{{ contact.phone }}</p>
+                                                    <p class="mb-0">{{ contact.message }}</p>
+                                                </div>
+                                            </div><!--end media-->
+                                            <div class="row mt-2">
+                                                <button class="green-button"
                                                         style="background-color: white; width: 30px; height: 30px; border-radius: 50%; display: flex; justify-content: center; align-items: center; border: 1px solid #e3ebf6; box-shadow: 10 10 20px white;">
                                                     <a class="d-flex justify-content-center align-items-center"
                                                        style="width: 100%; height: 100%;"
-                                                       href="/contacts/{{contact.id}}">
+                                                       href="/contacts/{{ contact.id }}">
                                                         <div style="width: 20px; height: 20px; background-color: white; border-radius: 50%; display: flex; justify-content: center; align-items: center;">
                                                             <svg fill="#9ba7ca" height="18" width="18" class="edit-svgIcon" viewBox="0 0 512 512">
                                                                 <path d="M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z">
@@ -67,20 +61,21 @@
                                                             </div>
                                                         </a>
                                                     </button>
-                                                </span>
-                                            </td>
-                                        </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
+                                            </div>
+                                        </div><!--end card-body-->
+                                    </div><!--end card-->
+                                </div><!--end col-->
+                                {% endfor %}
+                            </div><!--end row-->
+                        </div><!--end card-body-->
+                    </div><!--end card-->
+                </div><!--end col-->
+            </div><!--end row-->
+        </div><!--end container-fluid-->
+    </div><!--end content-->
+</div><!--end main-panel-->
+
 <script>
 document.querySelectorAll('.delete-button').forEach(button => {
     button.addEventListener('click', async function(event) {
@@ -124,7 +119,7 @@ document.querySelectorAll('.delete-button').forEach(button => {
 
                         if (response.status === 204) {
                             bootbox.alert({
-                                message: 'contact deleted successfully.',
+                                message: 'Contact deleted successfully.',
                                 size: 'small',
                                 callback: function () {
                                     window.location.reload();
@@ -132,7 +127,7 @@ document.querySelectorAll('.delete-button').forEach(button => {
                             });
                         } else if (response.status === 404) {
                             bootbox.alert({
-                                message: 'contact not found.',
+                                message: 'Contact not found.',
                                 size: 'small'
                             });
                         } else {
