--- a/app/templates/service_table.html
+++ b/app/templates/service_table.html
@@ -3,7 +3,7 @@
 <div class="main-panel">
     <div class="content">
         <div class="container-fluid">
-            <h4 class="page-title py-3">Service List</h4>
+            <h4 class="page-title py-3" style="font-size: 17px;margin: 0;color: #2c3652;font-weight: 500;line-height: 18px;font-family:Roboto, sans-serif;">Service List</h4>
             <div class="row">
                 <div class="col-md-12">
                     <div class="card">
@@ -14,7 +14,7 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
-                                <table id="myTable" class="table table-condensed">
+                                <table id="datatable" class="table table-condensed" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                     <thead>
                                         <tr>
                                             <th scope="col" style="font-weight: bold; color: #000;">ID</th>
