change the font size and font family

--- a/app/static/css/service_table.css
+++ b/app/static/css/service_table.css
@@ -1,8 +1,8 @@
         body {
-            font-family: Roboto, sans-serif; /* Optional: set a consistent font family */
+            font-family: Poppins, sans-serif; /* Optional: set a consistent font family */
         }
         .page-title, .card-header button, .card-header button a, .card-body, .table-responsive, .table, .table th, .table td, .green-button, .delete-button, .green-button a, .delete-button a {
-            font-size: 16px; /* Change this to your desired font size */
+            font-size: 14px; color: #2c3652;/* Change this to your desired font size */
         }
 
         .card-header .green-button, .delete-button {
